[package]
name = "deno-ftp"
version = "0.1.0"
authors = ["Akshat Agarwal <humancalico@disroot.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
deno_core = "0.47.1"
ftp = { version = "3.0.1", features = ["secure"] }
serde = { version = "1.0.111", features = ["derive"] }
serde_json = { version = "1.0.55", features = [ "preserve_order" ] }
futures = { version = "0.3.5", features = ["compat", "io-compat"] }